Reorganziar el manejo de excepciones y orden del proyecto